# gh-env-sync

./: .env  Cargo.toml  LICENSE  README.md  github_environments.toml  justfile
crates/gh-client/: Cargo.toml
crates/gh-client/src/: client.rs  gh_client.rs  lib.rs  main.rs
crates/gh-env-sync/: Cargo.toml
crates/gh-env-sync/src/: cli.rs  gh_client.rs  main.rs
