[package]
edition = "2021"
name = "gh-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
reqwest = {version = "0.11.20", features = ["json"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
tracing = "0.1.37"
