[package]
authors = ["Michael Helvey <michael.helvey1@gmail.com>"]
description = "A CLI to sync secrets and variables from a local TOML file to a Github repository"
edition = "2021"
name = "gh-env-sync"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.2", features = ["derive"]}
color-eyre = "0.6.2"
reqwest = {version = "0.11.20", features = ["json"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
tokio = {version = "1.32.0", features = ["full"]}
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
